Project: Increased size of grid / card icons and fixed icons alignment

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3062,12 +3062,11 @@ h6 {
   padding-top: 2px; }
 .btn-inline .btn-icons a {
   display: inline-block;
-  padding-right: 5px;
   line-height: 11px;
   vertical-align: middle; }
 .btn-inline .btn-icons a i.material-icons {
   color: #b5b5b5;
-  font-size: 16px; }
+  font-size: 24px; }
 .btn-inline .btn-icons a.active i, .btn-inline .btn-icons a:hover i, .btn-inline .btn-icons a:focus i {
   color: #09b8e2; }
 .btn-inline .btn-calender {
